# WorkflowAI

./: .dockerignore  .editorconfig  .env.sample  .eslintignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  api.Dockerfile  az-deploy.ipynb  client.Dockerfile  docker-compose.yml  locustfile.py  main.bicep  openapi-ts.config.cjs  package.json  pyproject.toml  pytest.ini
.github/workflows/: .api-quality.yml  .build.yml  .client-quality.yml  .deploy.yml  main.yml  quality.yml  release.yml  tags.yml
.storybook/: main.ts
api/: README.md  conftest.py
api/api/: broker.py  common.py  conftest.py  errors.py  errors_test.py  main.py  main_router.py  main_test.py  tags.py  utils.py
api/docs/: docs_workflowai_com.md  docs_workflowai_com_ai_agents_playbook_best_practices.md  docs_workflowai_com_ai_agents_playbook_building_your_first_ai_agent.md  docs_workflowai_com_ai_agents_playbook_evaluating_your_ai_agent.md  docs_workflowai_com_ai_agents_playbook_fine_tuning.md  docs_workflowai_com_ai_agents_playbook_improving_your_ai_agent.md  docs_workflowai_com_ai_agents_playbook_introduction.md  docs_workflowai_com_ai_agents_playbook_rag.md  docs_workflowai_com_ai_agents_playbook_testing_your_ai_agent.md  docs_workflowai_com_ai_agents_playbook_what_is_an_ai_agent.md  docs_workflowai_com_ai_agents_playbook_what_to_do_next.md  docs_workflowai_com_ai_agents_playbook_workflows.md  docs_workflowai_com_concepts_ai_agents.md  docs_workflowai_com_concepts_prompt.md  docs_workflowai_com_concepts_runs.md  docs_workflowai_com_concepts_schemas.md  docs_workflowai_com_concepts_tools.md  docs_workflowai_com_concepts_versions.md  docs_workflowai_com_features_benchmarks.md  docs_workflowai_com_features_code.md  docs_workflowai_com_features_deployments.md  docs_workflowai_com_features_limitations.md  docs_workflowai_com_features_monitoring.md  docs_workflowai_com_features_playground.md  docs_workflowai_com_features_user_feedback.md  docs_workflowai_com_getting_started_first_agent.md  docs_workflowai_com_getting_started_for_developers.md  docs_workflowai_com_getting_started_for_developers_cursor.md  docs_workflowai_com_getting_started_for_developers_v0_dev.md  docs_workflowai_com_getting_started_for_product_managers.md  docs_workflowai_com_getting_started_migrate.md  docs_workflowai_com_python_sdk_agent.md  docs_workflowai_com_python_sdk_errors.md  docs_workflowai_com_python_sdk_get_started.md  docs_workflowai_com_python_sdk_multimodality.md  docs_workflowai_com_python_sdk_schemas.md  docs_workflowai_com_python_sdk_tools.md  docs_workflowai_com_python_sdk_versions.md  docs_workflowai_com_workflowai_cloud_compliance.md  docs_workflowai_com_workflowai_cloud_introduction.md  (+2 more)
api/tests/: asgi_transport.py  dummy_runner.py  models.py  utils.py  utils_test.py
client/: .eslintrc.json  Dockerfile  README.md  jest.config.ts  knip.config.ts  next.config.mjs  package.json  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.ts
client/backend-types/: fix_remote_openapi_schema.ts  openapi_fixed.json
client/src/: instrumentation.ts  middleware.ts
scripts/: _common.py  add_credits.py  check_mistral_models.py  cleanup_redis.py  count_tokens.py  fill_task_uids.py  fill_tenant_uids.py  fix_cost_of_failed_runs.py  fix_pricing.py  import_runs_into_clickhouse.py  import_task.py  make_blob_public.py  mongo_migrate.py  recompute_credits.py  replace_image_data_in_runs.py  set_org_domain.py  start.sh  update_run_counts.py  update_task_schema_mappings.py
(+1651 files in other folders)
